--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,3 +2,36 @@
 // ---------------------------------
 
 @import "vendor/normalize";
+
+
+// Global
+
+@import "global/variables";
+@import "global/fonts";
+@import "global/global";
+@import "global/utils";
+
+// Blocks
+
+@import "blocks/button";
+@import "blocks/title";
+@import "blocks/container";
+@import "blocks/main-content";
+@import "blocks/logo";
+@import "blocks/header";
+@import "blocks/nav";
+@import "blocks/hero";
+/*
+@import "blocks/tours";
+@import "blocks/training";
+@import "blocks/about";
+@import "blocks/reviews";
+@import "blocks/advantages";
+@import "blocks/gallery";
+@import "blocks/form";
+@import "blocks/footer";
+@import "blocks/contacts";
+@import "blocks/map";
+@import "blocks/footer-nav";
+@import "blocks/social";
+ */
