--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -34,6 +34,11 @@
 
     font-size: 14px;
   }
+
+  @media (min-width: $desktop-width) {
+    min-height: 58px;
+    padding: 5px 5px 5px 30px;
+  }
 }
 
 .button__icon {
@@ -57,6 +62,8 @@
 .button__icon svg {
   width: 8px;
   height: 8px;
+
+  transition: all 0.3s ease-in-out;
 
   stroke: $color-basic-light;
 }
