--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -187,7 +187,7 @@
 
   @media (min-width: $desktop-width) {
     min-height: 800px;
-    padding: 120px 60px 100px;
+    padding: 120px 100px 60px;
   }
 }
 
@@ -254,7 +254,6 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  //min-width: 80px;
 
   gap: 4px;
 }
@@ -329,6 +328,14 @@
 
     border-radius: 0 30px 30px 0;
   }
+
+  @media (min-width: $desktop-width) {
+    margin-right: 272px;
+    padding: 40px 50px 30px;
+
+    font-size: 54px;
+    line-height: 115%;
+  }
 }
 
 .hero__item-content {
@@ -362,7 +369,21 @@
       mask-position: center center;
       mask-repeat: no-repeat;
       mask-size: 20px 20px;
+
+      @media (min-width: $desktop-width) {
+        right: -26px;
+
+        width: 26px;
+        height: 26px;
+
+        mask-size: 26px 26px;
+      }
     }
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-right: 465px;
+    padding: 0 50px 35px 50px;
   }
 }
 
@@ -443,5 +464,9 @@
     @media (min-width: $tablet-width) {
       display: none;
     }
+  }
+
+  @media (min-width: $desktop-width) {
+    align-self: center;
   }
 }
