--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -46,127 +46,145 @@
 }
 
 .hero__item--company::before {
-  background-image: image-set(
-    url("../img/hero/1-hero-mobile@1.webp") type("image/webp") 1x,
-    url("../img/hero/1-hero-mobile@1.jpg") type("image/jpeg") 1x
-  );
+  background-image:
+    image-set(
+      url("../img/hero/1-hero-mobile@1.webp") type("image/webp") 1x,
+      url("../img/hero/1-hero-mobile@1.jpg") type("image/jpeg") 1x
+    );
 
   @media (min-resolution: $retina) {
-    background-image: image-set(
-      url("../img/hero/1-hero-mobile@2.webp") type("image/webp") 2x,
-      url("../img/hero/1-hero-mobile@2.jpg") type("image/jpeg") 2x
-    );
+    background-image:
+      image-set(
+        url("../img/hero/1-hero-mobile@2.webp") type("image/webp") 2x,
+        url("../img/hero/1-hero-mobile@2.jpg") type("image/jpeg") 2x
+      );
   }
 
   @media (min-width: $tablet-width) {
-    background-image: image-set(
-      url("../img/hero/1-hero-tablet@1.webp") type("image/webp") 1x,
-      url("../img/hero/1-hero-tablet@1.jpg") type("image/jpeg") 1x
-    );
+    background-image:
+      image-set(
+        url("../img/hero/1-hero-tablet@1.webp") type("image/webp") 1x,
+        url("../img/hero/1-hero-tablet@1.jpg") type("image/jpeg") 1x
+      );
 
     @media (min-resolution: $retina) {
-      background-image: image-set(
-        url("../img/hero/1-hero-tablet@2.webp") type("image/webp") 2x,
-        url("../img/hero/1-hero-tablet@2.jpg") type("image/jpeg") 2x
-      );
+      background-image:
+        image-set(
+          url("../img/hero/1-hero-tablet@2.webp") type("image/webp") 2x,
+          url("../img/hero/1-hero-tablet@2.jpg") type("image/jpeg") 2x
+        );
     }
   }
 
   @media (min-width: $desktop-width) {
-    background-image: image-set(
-      url("../img/hero/1-hero-desktop@1.webp") type("image/webp") 1x,
-      url("../img/hero/1-hero-desktop@1.jpg") type("image/jpeg") 1x
-    );
+    background-image:
+      image-set(
+        url("../img/hero/1-hero-desktop@1.webp") type("image/webp") 1x,
+        url("../img/hero/1-hero-desktop@1.jpg") type("image/jpeg") 1x
+      );
 
     @media (min-resolution: $retina) {
-      background-image: image-set(
-        url("../img/hero/1-hero-desktop@2.webp") type("image/webp") 2x,
-        url("../img/hero/1-hero-desktop@2.jpg") type("image/jpeg") 2x
-      );
+      background-image:
+        image-set(
+          url("../img/hero/1-hero-desktop@2.webp") type("image/webp") 2x,
+          url("../img/hero/1-hero-desktop@2.jpg") type("image/jpeg") 2x
+        );
     }
   }
 }
 
 .hero__item--volunteers::before {
-  background-image: image-set(
-    url("../img/hero/2-hero-mobile@1.webp") type("image/webp") 1x,
-    url("../img/hero/2-hero-mobile@1.jpg") type("image/jpeg") 1x
-  );
+  background-image:
+    image-set(
+      url("../img/hero/2-hero-mobile@1.webp") type("image/webp") 1x,
+      url("../img/hero/2-hero-mobile@1.jpg") type("image/jpeg") 1x
+    );
 
   @media (min-resolution: $retina) {
-    background-image: image-set(
-      url("../img/hero/2-hero-mobile@2.webp") type("image/webp") 2x,
-      url("../img/hero/2-hero-mobile@2.jpg") type("image/jpeg") 2x
-    );
+    background-image:
+      image-set(
+        url("../img/hero/2-hero-mobile@2.webp") type("image/webp") 2x,
+        url("../img/hero/2-hero-mobile@2.jpg") type("image/jpeg") 2x
+      );
   }
 
   @media (min-width: $tablet-width) {
-    background-image: image-set(
-      url("../img/hero/2-hero-tablet@1.webp") type("image/webp") 1x,
-      url("../img/hero/2-hero-tablet@1.jpg") type("image/jpeg") 1x
-    );
+    background-image:
+      image-set(
+        url("../img/hero/2-hero-tablet@1.webp") type("image/webp") 1x,
+        url("../img/hero/2-hero-tablet@1.jpg") type("image/jpeg") 1x
+      );
 
     @media (min-resolution: $retina) {
-      background-image: image-set(
-        url("../img/hero/2-hero-tablet@2.webp") type("image/webp") 2x,
-        url("../img/hero/2-hero-tablet@2.jpg") type("image/jpeg") 2x
-      );
+      background-image:
+        image-set(
+          url("../img/hero/2-hero-tablet@2.webp") type("image/webp") 2x,
+          url("../img/hero/2-hero-tablet@2.jpg") type("image/jpeg") 2x
+        );
     }
   }
 
   @media (min-width: $desktop-width) {
-    background-image: image-set(
-      url("../img/hero/2-hero-desktop@1.webp") type("image/webp") 1x,
-      url("../img/hero/2-hero-desktop@1.jpg") type("image/jpeg") 1x
-    );
+    background-image:
+      image-set(
+        url("../img/hero/2-hero-desktop@1.webp") type("image/webp") 1x,
+        url("../img/hero/2-hero-desktop@1.jpg") type("image/jpeg") 1x
+      );
 
     @media (min-resolution: $retina) {
-      background-image: image-set(
-        url("../img/hero/2-hero-desktop@2.webp") type("image/webp") 2x,
-        url("../img/hero/2-hero-desktop@2.jpg") type("image/jpeg") 2x
-      );
+      background-image:
+        image-set(
+          url("../img/hero/2-hero-desktop@2.webp") type("image/webp") 2x,
+          url("../img/hero/2-hero-desktop@2.jpg") type("image/jpeg") 2x
+        );
     }
   }
 }
 
 .hero__item--experience::before {
-  background-image: image-set(
-    url("../img/hero/3-hero-mobile@1.webp") type("image/webp") 1x,
-    url("../img/hero/3-hero-mobile@1.jpg") type("image/jpeg") 1x
-  );
+  background-image:
+    image-set(
+      url("../img/hero/3-hero-mobile@1.webp") type("image/webp") 1x,
+      url("../img/hero/3-hero-mobile@1.jpg") type("image/jpeg") 1x
+    );
 
   @media (min-resolution: $retina) {
-    background-image: image-set(
-      url("../img/hero/3-hero-mobile@2.webp") type("image/webp") 2x,
-      url("../img/hero/3-hero-mobile@2.jpg") type("image/jpeg") 2x
-    );
+    background-image:
+      image-set(
+        url("../img/hero/3-hero-mobile@2.webp") type("image/webp") 2x,
+        url("../img/hero/3-hero-mobile@2.jpg") type("image/jpeg") 2x
+      );
   }
 
   @media (min-width: $tablet-width) {
-    background-image: image-set(
-      url("../img/hero/3-hero-tablet@1.webp") type("image/webp") 1x,
-      url("../img/hero/3-hero-tablet@1.jpg") type("image/jpeg") 1x
-    );
+    background-image:
+      image-set(
+        url("../img/hero/3-hero-tablet@1.webp") type("image/webp") 1x,
+        url("../img/hero/3-hero-tablet@1.jpg") type("image/jpeg") 1x
+      );
 
     @media (min-resolution: $retina) {
-      background-image: image-set(
-        url("../img/hero/3-hero-tablet@2.webp") type("image/webp") 2x,
-        url("../img/hero/3-hero-tablet@2.jpg") type("image/jpeg") 2x
-      );
+      background-image:
+        image-set(
+          url("../img/hero/3-hero-tablet@2.webp") type("image/webp") 2x,
+          url("../img/hero/3-hero-tablet@2.jpg") type("image/jpeg") 2x
+        );
     }
   }
 
   @media (min-width: $desktop-width) {
-    background-image: image-set(
-      url("../img/hero/3-hero-desktop@1.webp") type("image/webp") 1x,
-      url("../img/hero/3-hero-desktop@1.jpg") type("image/jpeg") 1x
-    );
+    background-image:
+      image-set(
+        url("../img/hero/3-hero-desktop@1.webp") type("image/webp") 1x,
+        url("../img/hero/3-hero-desktop@1.jpg") type("image/jpeg") 1x
+      );
 
     @media (min-resolution: $retina) {
-      background-image: image-set(
-        url("../img/hero/3-hero-desktop@2.webp") type("image/webp") 2x,
-        url("../img/hero/3-hero-desktop@2.jpg") type("image/jpeg") 2x
-      );
+      background-image:
+        image-set(
+          url("../img/hero/3-hero-desktop@2.webp") type("image/webp") 2x,
+          url("../img/hero/3-hero-desktop@2.jpg") type("image/jpeg") 2x
+        );
     }
   }
 }
@@ -177,6 +195,7 @@
   justify-content: flex-end;
   max-width: 1440px;
   min-height: 568px;
+  margin: 0 auto;
   margin-top: auto;
   padding: 100px 15px 20px;
 
@@ -207,7 +226,7 @@
 
   @media (min-width: $tablet-width) {
     min-width: 100px;
-    padding: 14px 14px;
+    padding: 14px;
 
     border-radius: 20px 20px 0 0;
   }
@@ -258,9 +277,7 @@
   gap: 4px;
 }
 
-.hero__swiper
-  .swiper-pagination-horizontal.swiper-pagination-bullets
-  .swiper-pagination-bullet {
+.hero__swiper .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
   width: 8px;
   height: 8px;
 
@@ -294,9 +311,7 @@
   }
 }
 
-.hero__swiper
-  .swiper-pagination-horizontal.swiper-pagination-bullets
-  .swiper-pagination-bullet.swiper-pagination-bullet-active {
+.hero__swiper .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet.swiper-pagination-bullet-active {
   background-color: $color-basic-accent;
   border: 1px solid $color-basic-accent;
 }
@@ -344,7 +359,7 @@
 
     display: grid;
     margin-right: 85px;
-    padding: 0 40px 35px 40px;
+    padding: 0 40px 35px;
 
     background-color: $color-basic-light;
     border-radius: 0 0 30px 30px;
@@ -383,7 +398,7 @@
 
   @media (min-width: $desktop-width) {
     margin-right: 465px;
-    padding: 0 50px 35px 50px;
+    padding: 0 50px 35px;
   }
 }
 
@@ -399,7 +414,7 @@
   line-height: 143%;
 
   background-color: $color-basic-light;
-  border-radius: 0 0 14px 0;
+  border-radius: 0 0 14px;
 
   @media (min-width: $tablet-width) {
     margin: 0;
