--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,6 +14,7 @@
 // Blocks
 
 @import "blocks/button";
+@import "blocks/button-light";
 @import "blocks/title";
 @import "blocks/container";
 @import "blocks/main-content";
@@ -21,10 +22,13 @@
 @import "blocks/header";
 @import "blocks/nav";
 @import "blocks/hero";
+@import "blocks/about";
+@import "blocks/details";
+
 /*
 @import "blocks/tours";
 @import "blocks/training";
-@import "blocks/about";
+
 @import "blocks/reviews";
 @import "blocks/advantages";
 @import "blocks/gallery";
