add block programs mobile

--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -46,145 +46,131 @@
 }
 
 .hero__item--company::before {
-  background-image:
-    image-set(
-      url("../img/hero/1-hero-mobile@1.webp") type("image/webp") 1x,
-      url("../img/hero/1-hero-mobile@1.jpg") type("image/jpeg") 1x
-    );
+  background-image: -webkit-image-set(
+    url("../img/hero/1-hero-mobile@1.webp") type("image/webp") 1x,
+    url("../img/hero/1-hero-mobile@1.jpg") type("image/jpeg") 1x
+  );
+  background-image:         image-set(
+    url("../img/hero/1-hero-mobile@1.webp") type("image/webp") 1x,
+    url("../img/hero/1-hero-mobile@1.jpg") type("image/jpeg") 1x
+  );
 
   @media (min-resolution: $retina) {
-    background-image:
-      image-set(
-        url("../img/hero/1-hero-mobile@2.webp") type("image/webp") 2x,
-        url("../img/hero/1-hero-mobile@2.jpg") type("image/jpeg") 2x
-      );
+    background-image: image-set(
+      url("../img/hero/1-hero-mobile@2.webp") type("image/webp") 2x,
+      url("../img/hero/1-hero-mobile@2.jpg") type("image/jpeg") 2x
+    );
   }
 
   @media (min-width: $tablet-width) {
-    background-image:
-      image-set(
-        url("../img/hero/1-hero-tablet@1.webp") type("image/webp") 1x,
-        url("../img/hero/1-hero-tablet@1.jpg") type("image/jpeg") 1x
-      );
+    background-image: image-set(
+      url("../img/hero/1-hero-tablet@1.webp") type("image/webp") 1x,
+      url("../img/hero/1-hero-tablet@1.jpg") type("image/jpeg") 1x
+    );
 
     @media (min-resolution: $retina) {
-      background-image:
-        image-set(
-          url("../img/hero/1-hero-tablet@2.webp") type("image/webp") 2x,
-          url("../img/hero/1-hero-tablet@2.jpg") type("image/jpeg") 2x
-        );
+      background-image: image-set(
+        url("../img/hero/1-hero-tablet@2.webp") type("image/webp") 2x,
+        url("../img/hero/1-hero-tablet@2.jpg") type("image/jpeg") 2x
+      );
     }
   }
 
   @media (min-width: $desktop-width) {
-    background-image:
-      image-set(
-        url("../img/hero/1-hero-desktop@1.webp") type("image/webp") 1x,
-        url("../img/hero/1-hero-desktop@1.jpg") type("image/jpeg") 1x
-      );
+    background-image: image-set(
+      url("../img/hero/1-hero-desktop@1.webp") type("image/webp") 1x,
+      url("../img/hero/1-hero-desktop@1.jpg") type("image/jpeg") 1x
+    );
 
     @media (min-resolution: $retina) {
-      background-image:
-        image-set(
-          url("../img/hero/1-hero-desktop@2.webp") type("image/webp") 2x,
-          url("../img/hero/1-hero-desktop@2.jpg") type("image/jpeg") 2x
-        );
+      background-image: image-set(
+        url("../img/hero/1-hero-desktop@2.webp") type("image/webp") 2x,
+        url("../img/hero/1-hero-desktop@2.jpg") type("image/jpeg") 2x
+      );
     }
   }
 }
 
 .hero__item--volunteers::before {
-  background-image:
-    image-set(
-      url("../img/hero/2-hero-mobile@1.webp") type("image/webp") 1x,
-      url("../img/hero/2-hero-mobile@1.jpg") type("image/jpeg") 1x
-    );
+  background-image: image-set(
+    url("../img/hero/2-hero-mobile@1.webp") type("image/webp") 1x,
+    url("../img/hero/2-hero-mobile@1.jpg") type("image/jpeg") 1x
+  );
 
   @media (min-resolution: $retina) {
-    background-image:
-      image-set(
-        url("../img/hero/2-hero-mobile@2.webp") type("image/webp") 2x,
-        url("../img/hero/2-hero-mobile@2.jpg") type("image/jpeg") 2x
-      );
+    background-image: image-set(
+      url("../img/hero/2-hero-mobile@2.webp") type("image/webp") 2x,
+      url("../img/hero/2-hero-mobile@2.jpg") type("image/jpeg") 2x
+    );
   }
 
   @media (min-width: $tablet-width) {
-    background-image:
-      image-set(
-        url("../img/hero/2-hero-tablet@1.webp") type("image/webp") 1x,
-        url("../img/hero/2-hero-tablet@1.jpg") type("image/jpeg") 1x
-      );
+    background-image: image-set(
+      url("../img/hero/2-hero-tablet@1.webp") type("image/webp") 1x,
+      url("../img/hero/2-hero-tablet@1.jpg") type("image/jpeg") 1x
+    );
 
     @media (min-resolution: $retina) {
-      background-image:
-        image-set(
-          url("../img/hero/2-hero-tablet@2.webp") type("image/webp") 2x,
-          url("../img/hero/2-hero-tablet@2.jpg") type("image/jpeg") 2x
-        );
+      background-image: image-set(
+        url("../img/hero/2-hero-tablet@2.webp") type("image/webp") 2x,
+        url("../img/hero/2-hero-tablet@2.jpg") type("image/jpeg") 2x
+      );
     }
   }
 
   @media (min-width: $desktop-width) {
-    background-image:
-      image-set(
-        url("../img/hero/2-hero-desktop@1.webp") type("image/webp") 1x,
-        url("../img/hero/2-hero-desktop@1.jpg") type("image/jpeg") 1x
-      );
+    background-image: image-set(
+      url("../img/hero/2-hero-desktop@1.webp") type("image/webp") 1x,
+      url("../img/hero/2-hero-desktop@1.jpg") type("image/jpeg") 1x
+    );
 
     @media (min-resolution: $retina) {
-      background-image:
-        image-set(
-          url("../img/hero/2-hero-desktop@2.webp") type("image/webp") 2x,
-          url("../img/hero/2-hero-desktop@2.jpg") type("image/jpeg") 2x
-        );
+      background-image: image-set(
+        url("../img/hero/2-hero-desktop@2.webp") type("image/webp") 2x,
+        url("../img/hero/2-hero-desktop@2.jpg") type("image/jpeg") 2x
+      );
     }
   }
 }
 
 .hero__item--experience::before {
-  background-image:
-    image-set(
-      url("../img/hero/3-hero-mobile@1.webp") type("image/webp") 1x,
-      url("../img/hero/3-hero-mobile@1.jpg") type("image/jpeg") 1x
-    );
+  background-image: image-set(
+    url("../img/hero/3-hero-mobile@1.webp") type("image/webp") 1x,
+    url("../img/hero/3-hero-mobile@1.jpg") type("image/jpeg") 1x
+  );
 
   @media (min-resolution: $retina) {
-    background-image:
-      image-set(
-        url("../img/hero/3-hero-mobile@2.webp") type("image/webp") 2x,
-        url("../img/hero/3-hero-mobile@2.jpg") type("image/jpeg") 2x
-      );
+    background-image: image-set(
+      url("../img/hero/3-hero-mobile@2.webp") type("image/webp") 2x,
+      url("../img/hero/3-hero-mobile@2.jpg") type("image/jpeg") 2x
+    );
   }
 
   @media (min-width: $tablet-width) {
-    background-image:
-      image-set(
-        url("../img/hero/3-hero-tablet@1.webp") type("image/webp") 1x,
-        url("../img/hero/3-hero-tablet@1.jpg") type("image/jpeg") 1x
-      );
+    background-image: image-set(
+      url("../img/hero/3-hero-tablet@1.webp") type("image/webp") 1x,
+      url("../img/hero/3-hero-tablet@1.jpg") type("image/jpeg") 1x
+    );
 
     @media (min-resolution: $retina) {
-      background-image:
-        image-set(
-          url("../img/hero/3-hero-tablet@2.webp") type("image/webp") 2x,
-          url("../img/hero/3-hero-tablet@2.jpg") type("image/jpeg") 2x
-        );
+      background-image: image-set(
+        url("../img/hero/3-hero-tablet@2.webp") type("image/webp") 2x,
+        url("../img/hero/3-hero-tablet@2.jpg") type("image/jpeg") 2x
+      );
     }
   }
 
   @media (min-width: $desktop-width) {
-    background-image:
-      image-set(
-        url("../img/hero/3-hero-desktop@1.webp") type("image/webp") 1x,
-        url("../img/hero/3-hero-desktop@1.jpg") type("image/jpeg") 1x
-      );
+    background-image: image-set(
+      url("../img/hero/3-hero-desktop@1.webp") type("image/webp") 1x,
+      url("../img/hero/3-hero-desktop@1.jpg") type("image/jpeg") 1x
+    );
 
     @media (min-resolution: $retina) {
-      background-image:
-        image-set(
-          url("../img/hero/3-hero-desktop@2.webp") type("image/webp") 2x,
-          url("../img/hero/3-hero-desktop@2.jpg") type("image/jpeg") 2x
-        );
+      background-image: image-set(
+        url("../img/hero/3-hero-desktop@2.webp") type("image/webp") 2x,
+        url("../img/hero/3-hero-desktop@2.jpg") type("image/jpeg") 2x
+      );
     }
   }
 }
@@ -214,7 +200,8 @@
   position: relative;
   z-index: 50;
 
-  width: fit-content;
+  width: -moz-fit-content;
+  width:      fit-content;
   min-width: 80px;
   max-width: 250px;
   min-height: 28px;
@@ -243,12 +230,15 @@
     height: 10px;
 
     background-color: inherit;
-    transform: rotate(-90deg);
 
-    mask-image: url("../img/sprite/angle.svg");
-    mask-position: center center;
-    mask-repeat: no-repeat;
-    mask-size: 10px 10px;
+    -webkit-mask-image: url("../img/sprite/angle-rotation.svg");
+            mask-image: url("../img/sprite/angle-rotation.svg");
+    -webkit-mask-position: center center;
+            mask-position: center center;
+    -webkit-mask-repeat: no-repeat;
+            mask-repeat: no-repeat;
+    -webkit-mask-size: 10px 10px;
+            mask-size: 10px 10px;
 
     @media (min-width: $tablet-width) {
       right: -20px;
@@ -256,7 +246,8 @@
       width: 20px;
       height: 20px;
 
-      mask-size: 20px 20px;
+      -webkit-mask-size: 20px 20px;
+              mask-size: 20px 20px;
     }
   }
 }
@@ -277,7 +268,9 @@
   gap: 4px;
 }
 
-.hero__swiper .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
+.hero__swiper
+  .swiper-pagination-horizontal.swiper-pagination-bullets
+  .swiper-pagination-bullet {
   width: 8px;
   height: 8px;
 
@@ -311,7 +304,9 @@
   }
 }
 
-.hero__swiper .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet.swiper-pagination-bullet-active {
+.hero__swiper
+  .swiper-pagination-horizontal.swiper-pagination-bullets
+  .swiper-pagination-bullet.swiper-pagination-bullet-active {
   background-color: $color-basic-accent;
   border: 1px solid $color-basic-accent;
 }
@@ -380,10 +375,14 @@
 
       background-color: inherit;
 
-      mask-image: url("../img/sprite/angle.svg");
-      mask-position: center center;
-      mask-repeat: no-repeat;
-      mask-size: 20px 20px;
+      -webkit-mask-image: url("../img/sprite/angle.svg");
+              mask-image: url("../img/sprite/angle.svg");
+      -webkit-mask-position: center center;
+              mask-position: center center;
+      -webkit-mask-repeat: no-repeat;
+              mask-repeat: no-repeat;
+      -webkit-mask-size: 20px 20px;
+              mask-size: 20px 20px;
 
       @media (min-width: $desktop-width) {
         right: -26px;
@@ -391,7 +390,8 @@
         width: 26px;
         height: 26px;
 
-        mask-size: 26px 26px;
+        -webkit-mask-size: 26px 26px;
+                mask-size: 26px 26px;
       }
     }
   }
@@ -440,7 +440,8 @@
 
     background-color: inherit;
 
-    mask-image: url("../img/sprite/angle.svg");
+    -webkit-mask-image: url("../img/sprite/angle.svg");
+            mask-image: url("../img/sprite/angle.svg");
 
     @media (min-width: $tablet-width) {
       display: none;
@@ -474,7 +475,8 @@
 
     background-color: inherit;
 
-    mask-image: url("../img/sprite/angle.svg");
+    -webkit-mask-image: url("../img/sprite/angle.svg");
+            mask-image: url("../img/sprite/angle.svg");
 
     @media (min-width: $tablet-width) {
       display: none;
