--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,15 +15,19 @@
 
 @import "blocks/button";
 @import "blocks/button-light";
+@import "blocks/button-icon";
 @import "blocks/title";
+@import "blocks/subtitle";
 @import "blocks/container";
 @import "blocks/main-content";
 @import "blocks/logo";
+@import "blocks/slider-navigation";
 @import "blocks/header";
 @import "blocks/nav";
 @import "blocks/hero";
 @import "blocks/about";
 @import "blocks/details";
+@import "blocks/programs";
 
 /*
 @import "blocks/tours";
