--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -43,6 +43,7 @@
 
 .button__icon {
   display: flex;
+  flex-shrink: 0;
   justify-content: center;
   align-items: center;
   width: 34px;
@@ -60,12 +61,14 @@
 }
 
 .button__icon svg {
+  display: block;
   width: 8px;
   height: 8px;
 
   transition: all 0.3s ease-in-out;
 
   stroke: $color-basic-light;
+  stroke-width: 1.6px;
 }
 
 .button:hover {
@@ -82,7 +85,7 @@
 .button:hover .button__icon svg {
   transform: rotate(45deg);
 
-  stroke: #316dc2;
+  stroke: $color-main-basic;
 }
 
 .button:active {
