--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -24,7 +24,8 @@
 
   transition: all 0.3s ease-in-out;
 
-  user-select: none;
+  -webkit-user-select: none;
+          user-select: none;
 
   gap: 20px;
 
@@ -103,7 +104,7 @@
   transform: rotate(45deg);
   opacity: 0.7;
 
-  stroke: #316dc2;
+  stroke: $color-main-basic;
 }
 
 .button:focus,
