--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -46,131 +46,73 @@
 }
 
 .hero__item--company::before {
-  background-image: -webkit-image-set(
-    url("../img/hero/1-hero-mobile@1.webp") type("image/webp") 1x,
-    url("../img/hero/1-hero-mobile@1.jpg") type("image/jpeg") 1x
-  );
-  background-image:         image-set(
-    url("../img/hero/1-hero-mobile@1.webp") type("image/webp") 1x,
-    url("../img/hero/1-hero-mobile@1.jpg") type("image/jpeg") 1x
-  );
+  background-image: url("../img/hero/1-hero-mobile@1.jpg");
 
   @media (min-resolution: $retina) {
-    background-image: image-set(
-      url("../img/hero/1-hero-mobile@2.webp") type("image/webp") 2x,
-      url("../img/hero/1-hero-mobile@2.jpg") type("image/jpeg") 2x
-    );
+    background-image: url("../img/hero/1-hero-mobile@2.jpg");
   }
 
   @media (min-width: $tablet-width) {
-    background-image: image-set(
-      url("../img/hero/1-hero-tablet@1.webp") type("image/webp") 1x,
-      url("../img/hero/1-hero-tablet@1.jpg") type("image/jpeg") 1x
-    );
+    background-image: url("../img/hero/1-hero-tablet@1.jpg");
 
     @media (min-resolution: $retina) {
-      background-image: image-set(
-        url("../img/hero/1-hero-tablet@2.webp") type("image/webp") 2x,
-        url("../img/hero/1-hero-tablet@2.jpg") type("image/jpeg") 2x
-      );
+      background-image: url("../img/hero/1-hero-tablet@2.jpg");
     }
   }
 
   @media (min-width: $desktop-width) {
-    background-image: image-set(
-      url("../img/hero/1-hero-desktop@1.webp") type("image/webp") 1x,
-      url("../img/hero/1-hero-desktop@1.jpg") type("image/jpeg") 1x
-    );
+    background-image: url("../img/hero/1-hero-desktop@1.jpg");
 
     @media (min-resolution: $retina) {
-      background-image: image-set(
-        url("../img/hero/1-hero-desktop@2.webp") type("image/webp") 2x,
-        url("../img/hero/1-hero-desktop@2.jpg") type("image/jpeg") 2x
-      );
+      background-image: url("../img/hero/1-hero-desktop@2.jpg");
     }
   }
 }
 
 .hero__item--volunteers::before {
-  background-image: image-set(
-    url("../img/hero/2-hero-mobile@1.webp") type("image/webp") 1x,
-    url("../img/hero/2-hero-mobile@1.jpg") type("image/jpeg") 1x
-  );
+  background-image: url("../img/hero/2-hero-mobile@1.jpg");
 
   @media (min-resolution: $retina) {
-    background-image: image-set(
-      url("../img/hero/2-hero-mobile@2.webp") type("image/webp") 2x,
-      url("../img/hero/2-hero-mobile@2.jpg") type("image/jpeg") 2x
-    );
+    background-image: url("../img/hero/2-hero-mobile@2.jpg");
   }
 
   @media (min-width: $tablet-width) {
-    background-image: image-set(
-      url("../img/hero/2-hero-tablet@1.webp") type("image/webp") 1x,
-      url("../img/hero/2-hero-tablet@1.jpg") type("image/jpeg") 1x
-    );
+    background-image: url("../img/hero/2-hero-tablet@1.jpg");
 
     @media (min-resolution: $retina) {
-      background-image: image-set(
-        url("../img/hero/2-hero-tablet@2.webp") type("image/webp") 2x,
-        url("../img/hero/2-hero-tablet@2.jpg") type("image/jpeg") 2x
-      );
+      background-image: url("../img/hero/2-hero-tablet@2.jpg");
     }
   }
 
   @media (min-width: $desktop-width) {
-    background-image: image-set(
-      url("../img/hero/2-hero-desktop@1.webp") type("image/webp") 1x,
-      url("../img/hero/2-hero-desktop@1.jpg") type("image/jpeg") 1x
-    );
+    background-image: url("../img/hero/2-hero-desktop@1.jpg");
 
     @media (min-resolution: $retina) {
-      background-image: image-set(
-        url("../img/hero/2-hero-desktop@2.webp") type("image/webp") 2x,
-        url("../img/hero/2-hero-desktop@2.jpg") type("image/jpeg") 2x
-      );
+      background-image: url("../img/hero/2-hero-desktop@2.jpg");
     }
   }
 }
 
 .hero__item--experience::before {
-  background-image: image-set(
-    url("../img/hero/3-hero-mobile@1.webp") type("image/webp") 1x,
-    url("../img/hero/3-hero-mobile@1.jpg") type("image/jpeg") 1x
-  );
+  background-image: url("../img/hero/3-hero-mobile@1.jpg");
 
   @media (min-resolution: $retina) {
-    background-image: image-set(
-      url("../img/hero/3-hero-mobile@2.webp") type("image/webp") 2x,
-      url("../img/hero/3-hero-mobile@2.jpg") type("image/jpeg") 2x
-    );
+    background-image: url("../img/hero/3-hero-mobile@2.jpg");
   }
 
   @media (min-width: $tablet-width) {
-    background-image: image-set(
-      url("../img/hero/3-hero-tablet@1.webp") type("image/webp") 1x,
-      url("../img/hero/3-hero-tablet@1.jpg") type("image/jpeg") 1x
-    );
+    background-image: url("../img/hero/3-hero-tablet@1.jpg");
 
     @media (min-resolution: $retina) {
-      background-image: image-set(
-        url("../img/hero/3-hero-tablet@2.webp") type("image/webp") 2x,
-        url("../img/hero/3-hero-tablet@2.jpg") type("image/jpeg") 2x
-      );
+      background-image: url("../img/hero/3-hero-tablet@2.jpg");
     }
   }
 
   @media (min-width: $desktop-width) {
-    background-image: image-set(
-      url("../img/hero/3-hero-desktop@1.webp") type("image/webp") 1x,
-      url("../img/hero/3-hero-desktop@1.jpg") type("image/jpeg") 1x
-    );
+    background-image: url("../img/hero/3-hero-desktop@1.jpg");
 
     @media (min-resolution: $retina) {
-      background-image: image-set(
-        url("../img/hero/3-hero-desktop@2.webp") type("image/webp") 2x,
-        url("../img/hero/3-hero-desktop@2.jpg") type("image/jpeg") 2x
-      );
+      background-image: url("../img/hero/3-hero-desktop@2.jpg");
     }
   }
 }
