--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -5,6 +5,12 @@
   @media (min-width: $tablet-width) {
     padding-right: 0;
   }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 60px;
+    padding-right: 100px;
+    padding-bottom: 60px;
+  }
 }
 
 .programs__wrapper {
@@ -16,18 +22,36 @@
   @media (min-width: $tablet-width) {
     grid-template-columns: auto auto 54px 45px;
   }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: auto auto 54px;
+  }
 }
 
 .programs__title {
   padding: 5px 4px 5px 0;
+
+  @media (min-width: $tablet-width) {
+    padding: 3px 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 5px 0;
+  }
 }
 
 .programs__slider-navigation {
   margin-top: 4px;
 
   @media (min-width: $tablet-width) {
+    margin: 0;
+
     grid-column: -3 / -2;
     grid-row: -2 / -1;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: -2 / -1;
   }
 }
 
@@ -61,10 +85,13 @@
 
   @media (min-width: $tablet-width) {
     max-width: 324px;
+    min-height: 420px;
+    padding: 38px 20px 10px;
   }
 
   @media (min-width: $desktop-width) {
     max-width: 392px;
+    padding: 38px 51px 17px 20px;
   }
 
   &::after {
@@ -113,16 +140,26 @@
   background-color: $color-basic-light;
   border-radius: 12px 12px 0 0;
 
+  @media (min-width: $tablet-width) {
+    min-height: 38px;
+    margin-right: 111px;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-height: 41px;
+    margin-right: 127px;
+  }
+
   &::after {
     content: "";
     position: absolute;
     right: -18px;
-    bottom: -1px;
+    bottom: 0;
     z-index: 1;
 
     box-sizing: border-box;
-    width: 19px;
-    height: 19px;
+    width: 18px;
+    height: 18px;
 
     background-color: inherit;
 
@@ -148,6 +185,14 @@
 
   gap: 16px;
   grid-template-columns: auto auto;
+
+  @media (min-width: $tablet-width) {
+    min-height: 87px;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-height: 82px;
+  }
 }
 
 .programs__content p {
@@ -156,22 +201,51 @@
 
   font-size: 12px;
   line-height: 117%;
+
+  @media (min-width: $tablet-width) {
+    padding-bottom: 4px;
+
+    font-size: 14px;
+    line-height: 143%;
+  }
+
+  @media (min-width: $desktop-width) {
+    font-size: 14px;
+    line-height: 129%;
+  }
 }
 
 .programs__button-icon {
   margin-bottom: 3px;
 }
 
-.programs__scrollbar.swiper-scrollbar.swiper-scrollbar-horizontal {
+.programs__scrollbar.swiper-scrollbar.swiper-scrollbar-horizontal,
+.swiper-scrollbar {
   display: none;
 
   @media (min-width: $tablet-width) {
     position: static;
 
     display: block;
+    align-self: center;
+    width: 90%;
+    height: 2px;
+
+    background-color: rgba($color-main-basic, 0.2);
+    border-radius: 0;
+    opacity: 1;
 
     grid-column: 1 / 3;
     grid-row: 3 / 4;
+  }
+}
+
+.programs__scrollbar-drag.swiper-scrollbar-drag {
+  @media (min-width: $tablet-width) {
+    background-color: $color-main-basic;
+    cursor: grab;
+
+    touch-action: pan-y;
   }
 }
 
@@ -188,5 +262,9 @@
     grid-column: 2 / 4;
     grid-row: 1 / 2;
     justify-self: end;
+  }
+
+  @media (min-width: $desktop-width) {
+    align-self: center;
   }
 }
