--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -7,6 +7,7 @@
   padding: 11px;
 
   background-color: $color-basic-light;
+  background-size: 52px 52px;
   border-radius: 50%;
   cursor: default;
 }
