--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,11 +28,14 @@
 @import "blocks/about";
 @import "blocks/details";
 @import "blocks/programs";
+@import "blocks/grant";
+@import "blocks/news";
+@import "blocks/faq";
+@import "blocks/reviews";
 
 /*
 @import "blocks/tours";
 @import "blocks/training";
-
 @import "blocks/reviews";
 @import "blocks/advantages";
 @import "blocks/gallery";
