--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,7 +1,7 @@
 .about__container {
   display: flex;
   flex-direction: column;
-  padding-top: 50px;
+  padding-top: 51px;
   padding-bottom: 50px;
 
   gap: 40px;
@@ -22,6 +22,10 @@
 
   gap: 40px;
 
+  @media (min-width: $tablet-width) {
+    gap: 39px;
+  }
+
   @media (min-width: $desktop-width) {
     flex-direction: row;
   }
@@ -37,11 +41,11 @@
   margin-bottom: 15px;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 31px;
+    margin-bottom: 30px;
   }
 
   @media (min-width: $desktop-width) {
-    margin-bottom: 30px;
+    margin-bottom: 31px;
   }
 }
 
@@ -65,13 +69,13 @@
 .about__content {
   @media (min-width: $desktop-width) {
     width: 498px;
-    padding: 10px 0 0;
+    padding: 11px 0 0;
   }
 }
 
 .about__content h3 {
   margin: 0;
-  margin-bottom: 20px;
+  margin-bottom: 19px;
 
   font-weight: 400;
   font-size: 18px;
@@ -79,14 +83,14 @@
   color: $color-main-basic;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 29px;
+    margin-bottom: 30px;
 
     font-size: 28px;
     line-height: 100%;
   }
 
   @media (min-width: $desktop-width) {
-    margin-bottom: 41px;
+    margin-bottom: 39px;
 
     font-size: 32px;
     line-height: 112%;
@@ -112,15 +116,17 @@
     margin-bottom: 50px;
 
     font-size: 16px;
-    line-height: 162%;
+    line-height: 163%;
   }
 }
 
 .about__button {
   max-width: 223px;
+  padding: 5px 4px 3px 20px;
 
   @media (min-width: $tablet-width) {
     max-width: 279px;
+    padding: 4px 4px 4px 30px;
   }
 
   @media (min-width: $desktop-width) {
