--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -1,9 +1,11 @@
 .programs__container {
-  padding-top: 50px;
+  padding-top: 51px;
   padding-bottom: 50px;
 
   @media (min-width: $tablet-width) {
+    padding-top: 50px;
     padding-right: 0;
+    padding-bottom: 50px;
   }
 
   @media (min-width: $desktop-width) {
@@ -32,7 +34,7 @@
   padding: 5px 4px 5px 0;
 
   @media (min-width: $tablet-width) {
-    padding: 3px 0;
+    padding: 4px 0 3px;
   }
 
   @media (min-width: $desktop-width) {
@@ -61,14 +63,18 @@
 
 .programs__swiper.swiper {
   width: 100%;
-  margin-top: 30px;
+  margin-top: 29px;
   margin-bottom: 30px;
 
   grid-column: 1 / -1;
 
   @media (min-width: $tablet-width) {
-    margin-top: 40px;
+    margin-top: 39px;
     margin-bottom: 40px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: 40px;
   }
 }
 
@@ -135,7 +141,7 @@
   flex-shrink: 0;
   min-height: 42px;
   margin-right: 124px;
-  padding: 18px 18px 5px 18px;
+  padding: 19px 18px 5px;
 
   background-color: $color-basic-light;
   border-radius: 12px 12px 0 0;
@@ -148,6 +154,7 @@
   @media (min-width: $desktop-width) {
     min-height: 41px;
     margin-right: 127px;
+    padding: 18px 18px 0;
   }
 
   &::after {
@@ -164,13 +171,13 @@
     background-color: inherit;
 
     -webkit-mask-image: url("../img/sprite/angle-rotation.svg");
-            mask-image: url("../img/sprite/angle-rotation.svg");
+    mask-image: url("../img/sprite/angle-rotation.svg");
     -webkit-mask-position: center center;
-            mask-position: center center;
+    mask-position: center center;
     -webkit-mask-repeat: no-repeat;
-            mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
     -webkit-mask-size: 18px 18px;
-            mask-size: 18px 18px;
+    mask-size: 18px 18px;
   }
 }
 
@@ -181,7 +188,7 @@
   padding: 0 18px;
 
   background-color: $color-basic-light;
-  border-radius: 0 12px 12px 12px;
+  border-radius: 0 12px 12px;
 
   gap: 16px;
   grid-template-columns: auto auto;
@@ -203,7 +210,7 @@
   line-height: 117%;
 
   @media (min-width: $tablet-width) {
-    padding-bottom: 4px;
+    padding-bottom: 3px;
 
     font-size: 14px;
     line-height: 143%;
@@ -238,6 +245,10 @@
     grid-column: 1 / 3;
     grid-row: 3 / 4;
   }
+
+  @media (min-width: $desktop-width) {
+    width: 96%;
+  }
 }
 
 .programs__scrollbar-drag.swiper-scrollbar-drag {
@@ -251,7 +262,7 @@
 
 .programs__button {
   min-height: 44px;
-  padding: 4px 4px 4px 30px;
+  padding: 5px 4px 3px 30px;
 
   @media (min-width: $tablet-width) {
     align-self: baseline;
@@ -266,5 +277,6 @@
 
   @media (min-width: $desktop-width) {
     align-self: center;
+    padding: 3px 4px 3px 30px;
   }
 }
