--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -32,17 +32,10 @@
 @import "blocks/news";
 @import "blocks/faq";
 @import "blocks/reviews";
-
-/*
-@import "blocks/tours";
-@import "blocks/training";
-@import "blocks/reviews";
-@import "blocks/advantages";
-@import "blocks/gallery";
-@import "blocks/form";
-@import "blocks/footer";
 @import "blocks/contacts";
 @import "blocks/map";
+@import "blocks/feedback";
+@import "blocks/form";
+@import "blocks/footer";
 @import "blocks/footer-nav";
 @import "blocks/social";
- */
