--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,6 +13,7 @@
 
 // Blocks
 
+@import "blocks/page-body";
 @import "blocks/button";
 @import "blocks/button-light";
 @import "blocks/button-icon";
@@ -39,3 +40,4 @@
 @import "blocks/footer";
 @import "blocks/footer-nav";
 @import "blocks/social";
+@import "blocks/modal";
